signup page added

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,1 +1,67 @@
-<p>signup works!</p>
+<div class="bg-lg-blue h-100vh d-flex flex-column justify-content-center">
+  <div class="container">
+    <div class="d-flex justify-content-center">
+      <div class="card card-width rounded shadow">
+        <div class="card-body">
+          <div class="card-title text-justify">
+            <h3><strong>Create Account</strong></h3>
+            <p class="card-subtitle">Hey, Enter your details to get registered</p>
+          </div>
+          <div class="pt-3">
+            <div class="d-flex flex-column">
+              <form [formGroup]="signupForm">
+                <div class="form-floating mb-3">
+                  <input formControlName="name" type="text" class="form-control" id="nameFloatingInput"
+                    placeholder="Enter your name">
+                  <label for="nameFloatingInput">Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input formControlName="username" type="text" class="form-control" id="usernameFloatingInput"
+                    placeholder="Enter your username">
+                  <label for="usernameFloatingInput">Username</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input formControlName="email" type="email" class="form-control" id="emailFloatingInput"
+                    placeholder="Enter email address">
+                  <label for="emailFloatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input formControlName="password" type="password" class="form-control" id="passwordFloatingInput"
+                    placeholder="Password">
+                  <label for="passwordFloatingInput">Password</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input formControlName="dateOfBirth" type="date" class="form-control" id="dobFloatingInput">
+                  <label for="dobFloatingInput">Date of birth</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <select formControlName="gender" class="form-select" id="floatingSelect" aria-label="Select gender">
+                    <option [ngValue]="null">Select gender</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Other">Other</option>
+                  </select>
+                  <label for="floatingSelect">Gender</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input formControlName="contact" type="number" class="form-control" id="contactFloatingInput"
+                    placeholder="Enter your contact">
+                  <label for="contactFloatingInput">Contact</label>
+                </div>
+                <div class="mb-3">
+                  <button type="submit" class="btn-blue w-100 py-2 rounded" (click)="validateForm()">
+                    <strong>Register</strong>
+                  </button>
+                </div>
+              </form>
+              <div class="pt-3">
+                <label>Don't have an account?</label>
+                <a class="anchor-tag" routerLink="/register"> Register Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
