--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -6,3 +6,19 @@
   text-decoration: none;
   color: var(--blue);
 }
+
+
+// ===================================== MEDIA QUERIES ===================================== 
+
+@media screen and (max-width: 1000px) {
+  .card-width {
+    width: 80%;
+  }
+}
+
+
+@media screen and (max-width: 700px) {
+  .card-width {
+    width: 100%;
+  }
+}
