--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,9 +11,9 @@
             <div class="d-flex flex-column">
               <form [formGroup]="loginForm">
                 <div class="form-floating mb-3">
-                  <input formControlName="email" type="email" class="form-control" id="emailFloatingInput"
-                    placeholder="Enter email address">
-                  <label for="emailFloatingInput">Email address</label>
+                  <input formControlName="username" type="text" class="form-control" id="usernameFloatingInput"
+                    placeholder="Enter username">
+                  <label for="usernameFloatingInput">Username</label>
                 </div>
                 <div class="form-floating mb-3">
                   <input formControlName="password" type="password" class="form-control" id="passwordFloatingInput"
