Envelop: get, add update crud completed and some UI done

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,15 @@ html {
 .h-100vh {
   height: 100vh;
 }
+
+.w-5 {
+  width: 5%;
+}
+
+.w-10 {
+  width: 10%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
