--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,6 +1,7 @@
 <div class="bg-lg-blue h-100vh d-flex flex-column justify-content-center">
   <div class="container">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center
+    ">
       <div class="card card-width rounded shadow">
         <div class="card-body">
           <div class="card-title text-justify">
