Standalone component: login and signup component converted to standalone component

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,7 +28,8 @@
               </form>
               <div class="pt-3">
                 <label>Don't have an account?</label>
-                <a class="anchor-tag" routerLink="/register"> Register Now</a>
+                <a class="anchor-tag cursor-pointer" (click)="navigateToRegister()"> Register Now</a>
+                <!-- <button type="button" class="btn btn-default p-0" (click)="navigateToRegister()"> Register Now</button> -->
               </div>
             </div>
           </div>
