--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-floating mb-3">
                   <select formControlName="gender" class="form-select" id="floatingSelect" aria-label="Select gender">
-                    <option [ngValue]="null">Select gender</option>
+                    <option value="null">Select gender</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
                     <option value="Other">Other</option>
