--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="bg-lg-blue h-100vh d-flex flex-column justify-content-center">
+<div class="d-flex flex-column justify-content-center h-100vh">
   <div class="container">
     <div class="d-flex justify-content-center">
       <div class="card card-width rounded shadow">
