base href changed

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -55,8 +55,8 @@
                 </div>
               </form>
               <div class="pt-3">
-                <label>Don't have an account?</label>
-                <a class="anchor-tag" routerLink="/register"> Register Now</a>
+                <label>Already have an account?</label>
+                <a class="anchor-tag" routerLink="/login"> Login</a>
               </div>
             </div>
           </div>
