--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -56,7 +56,7 @@
               </form>
               <div class="pt-3">
                 <label>Already have an account?</label>
-                <a class="anchor-tag" routerLink="/login"> Login</a>
+                <a class="anchor-tag cursor-pointer" (click)="navigateToLogin()"> Login</a>
               </div>
             </div>
           </div>
