accounts component and service added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar *ngIf="isNavbarVisible"></app-navbar>
 <router-outlet></router-outlet>
+
+<app-toast aria-live="polite" aria-atomic="true"></app-toast>
