--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,9 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li> -->
         <li class="nav-item">
+          <a class="nav-link" routerLink="/account">Accounts</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/envelop">Envelops</a>
         </li>
         <li class="nav-item">
