Envelop functioning done

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -38,3 +38,8 @@
     </div>
   </div>
 </div>
+
+
+<ng-template #messageTemplate>
+  <span class="toast-font"><strong>{{message}}</strong></span>
+</ng-template>
