--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/envelop/dashboard">Budget Planner</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
       <ul class="navbar-nav">
         <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -19,6 +20,14 @@
           <a class="nav-link" href="#">Spending</a>
         </li>
       </ul>
+      <ul class="navbar-nav">
+        <li>
+          <a class="nav-link" (click)="logout()">Logout</a>
+        </li>
+      </ul>
+      <!-- <h4 class="navbar-text">
+        <button class="btn btn-default" (click)="logout()">Logout</button>
+      </h4> -->
     </div>
   </div>
 </nav>
